// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates and schedules selections: accessors 1`] = `
Query {
  string
  object {
    string
  }
  arrayOfObjects {
    0
    1 {
      string
    }
  }
  arrayOfString
}
`;

exports[`creates and schedules selections: selections 1`] = `
Query {
  string
  object {
    string
  }
  arrayOfObjects {
    string
  }
  arrayOfString
}
`;

exports[`supports arguments: accessors 1`] = `
Query {
  arrayOfObjects(string:"test2") {
    0 {
      string
    }
  }
  arrayOfObjects(string:"test3") {
    0
  }
  arrayOfObjects(input:{string:"test1"})
}
`;

exports[`supports arguments: selections 1`] = `
Query {
  arrayOfObjects(string:"test2") {
    string
  }
  arrayOfObjects(string:"test3")
  arrayOfObjects(input:{string:"test1"})
}
`;
